--- a/src/components/LeftSideBar/LeftSideBar.module.css
+++ b/src/components/LeftSideBar/LeftSideBar.module.css
@@ -228,4 +228,8 @@
   margin: 1px;
   background-color: #888;
 }
+
+button:hover {
+  cursor: pointer;
+}
 /*# sourceMappingURL=LeftSideBar.module.css.map */
