--- a/src/components/Tree/TreeNode.module.scss
+++ b/src/components/Tree/TreeNode.module.scss
@@ -18,6 +18,9 @@ li{
     height: 14.24px;
     margin-left: 5px;
    }
+   p{
+       margin-left: 5px;
+   }
 }
 .folder:hover{
     // opacity: 1;
@@ -45,6 +48,9 @@ li{
     margin-left: 5px;
     padding-right: 2px;
    }
+   p{
+    margin-left: 5px;
+}
 }
 .folder_dark:hover{
     background-color: black;
