--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -18,7 +18,6 @@
 }
 
 .error_message {
-  padding-top: 10px;
   margin-left: 63px;
   color: red;
 }
@@ -59,7 +58,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 3rem;
+  margin-top: 20px;
 }
 
 .pin_feild {
@@ -329,5 +328,24 @@ input::-webkit-inner-spin-button {
   height: 250px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.unlock_button {
+  outline: none;
+  background: none;
+  padding: 10px 20px;
+  border: none;
+  width: 80%;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-radius: 25px;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: 400;
+  cursor: pointer;
+  -webkit-transition: all .1s ease;
+  transition: all .1s ease;
+  background: #142683;
 }
 /*# sourceMappingURL=Modal.module.css.map */
