--- a/src/components/Tree/TreeNode.module.css
+++ b/src/components/Tree/TreeNode.module.css
@@ -24,6 +24,10 @@ li {
   margin-left: 5px;
 }
 
+.folder p {
+  margin-left: 5px;
+}
+
 .folder:hover {
   cursor: pointer;
 }
@@ -50,6 +54,10 @@ li {
   height: 14.24px;
   margin-left: 5px;
   padding-right: 2px;
+}
+
+.folder_dark p {
+  margin-left: 5px;
 }
 
 .folder_dark:hover {
